# ArxivMind-arxiv-rag-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  streamlit_app.py
airflow/: .gitignore  Dockerfile  requirements-airflow.txt  requirements.txt
airflow/dags/: exampledag.py  hello_world_dag.py
notebooks/: arxiv_package_test.ipynb  first_test.ipynb  postgresql_test.ipynb
postgres-init/: init-airflow-db.sql
src/: exceptions.py  main.py
src/db/: database.py  models.py
src/db/utils/: chat_history.py  insert_chat_history.py
src/schemas/database/: chat_schema.py
src/schemas/pdf_parser/: models.py
src/services/arxiv_downloader/: client.py  download_test.ipynb
src/services/nvidia_nim/: client.py
src/services/ollama/: client.py
src/services/pdf_parser/: doc_parser.py  doc_parser_utils.py  factory.py
