[project]
name = "arxivmind-arxiv-rag-assistant"
version = "0.1.0"
description = "An End-to-End RAG-powered assistant for arXiv research papers"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "streamlit>=1.39",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",   # server for FastAPI
  "requests>=2.32",
  "langchain>=0.2",
  "langchain-ollama>=0.1",
  "langchain-nvidia-ai-endpoints>=0.1",
  "python-dotenv>=1.0",
  "langchain-community>=0.0.34",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "docling>=2.43.0",
  "arxiv>=2.0.0",
  "ipykernel>=6.29,<7.0"
]
